objects/HealthCloudGA__EhrPractitionerIdentity__c.object
<CustomObject>
    <description>Defines external identities for a practitioner such as license and regional Identifiers</description>
    <fields>
        <fullName>HealthCloudGA__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__EhrPractitioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EHR Practitioner</label>
        <referenceTo>HealthCloudGA__EhrPractitioner__c</referenceTo>
        <relationshipLabel>Practitioner Identities</relationshipLabel>
        <relationshipName>PractitionerIdentities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsRestricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRestricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsVisibleOnPatientCard__c</fullName>
        <description>If returns true, the record will appear on Patient Card</description>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsVisibleOnPatientCard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Organization__c</fullName>
        <description>Organization external Identifier applies to</description>
        <label>Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PeriodEndDate__c</fullName>
        <description>Date the external identifier expires</description>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PeriodStartDate__c</fullName>
        <description>Date external identifier is active</description>
        <label>Perioid Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemModified__c</fullName>
        <description>When last updated</description>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <defaultValue>&quot;Health1-&quot;+$Organization.Id</defaultValue>
        <description>Identifies the system that created the record and owns update rights to it.</description>
        <inlineHelpText>Identifies the system that created the record and owns update rights to it. Defaults to Health1 for manually created records.</inlineHelpText>
        <label>SourceSystem</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__System__c</fullName>
        <label>System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TypeCode__c</fullName>
        <description>License / Registration / ID</description>
        <label>Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TypeLabel__c</fullName>
        <description>License / Registration / ID</description>
        <label>Type Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TypeSystem__c</fullName>
        <description>License / Registration / ID</description>
        <label>Type System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Use__c</fullName>
        <description>usual | official | temp | secondary (If known)
IdentifierUse (Required)</description>
        <label>Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Value__c</fullName>
        <description>Identifiers for external system</description>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EHR Practitioner Identity</label>
    <nameField>
        <label>EHR Practitioner Identity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EHR Practitioner Identities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>